style.css
/* ... */
.element-main-d .screen-2 .main-div .right-div p:nth-child(2) {
  color: #FFF;
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: "Manrope", Helvetica;
  font-size: 44px;
  font-style: normal;
  font-weight: 500;
  line-height: 44px;
  margin-bottom: 44px;
}

@media screen and (max-width: 1000px) {
  .element-main-d .screen-2 .main-div .right-div p:nth-child(1) {
    font-size: 30px;
    line-height: 36px
  }
  .element-main-d .screen-2 .main-div .right-div p:nth-child(2) {
    margin-bottom: 24px;
    font-size: 30px;
    line-height: 36px
  }
}


.element-main-d .screen-2 .main-div .right-div p:nth-child(3) {
  color: #FFF;
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: "Manrope", Helvetica;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px;
  margin-bottom: 32px;
}

@media screen and (max-width: 1000px) {
  .element-main-d .screen-2 .main-div .right-div p:nth-child(2) {
    margin-bottom: 24px;
  }
}

.element-main-d .screen-2 .main-div .right-div a {
  color: #FFF;
  font-family: "Manrope", Helvetica;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 24px;

  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  --webkit-gap: 8px;
  
  text-decoration: none;
  padding: 12px 24px;
  border-radius: 24px;
  border: 1px solid rgba(234, 234, 255, 0.24);

  width: min-content;
  white-space: nowrap;
  cursor: pointer;
}

.element-main-d .screen-2 .main-div .right-div a img {
  content: url("./img/north-east-dark-24.svg");
}

/* screen2 light css start */
.element-main-d .screen-2.light {
  background: #FAF9F9;
}

.element-main-d .screen-2.light .main-div {
  background: #FAF9F9;
}

.element-main-d .screen-2.light .main-div .right-div p:nth-child(1) {
  color: rgba(16, 17, 18, 0.40);
}

.element-main-d .screen-2.light .main-div .right-div p:nth-child(2) {
  color: #101112;
}

.element-main-d .screen-2.light .main-div .right-div p:nth-child(3) {
  color: #101112;
}

.element-main-d .screen-2.light .main-div .right-div a {
  color: #101112;
  border: 1px solid rgba(16, 17, 18, 0.24);
}

.element-main-d .screen-2.light .main-div .right-div a img {
  content: url("./img/north-east-light-24.svg");
}

/* screen2 light css */


/* ------------------------ screen1 ------------------- */
.element-main-d .screen-1 {
  height: calc(100vh - 96px);
  overflow: hidden;
}

@media screen and (min-width: 1920px) {
  .element-main-d .screen-1 {
    /* max-height: 1000px; */
  }
}

@media screen and (max-width: 1000px) {
  .element-main-d .screen-1 {
    height: auto;
    max-height: none;
  }
}

.element-main-d .screen-1 .main-div {
  max-width: 1440px;
  margin: auto;
  padding: 0 48px;

  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 20px;
  --webkit-gap: 20px;

  position: relative;
}

@media screen and (max-width: 1000px) {
  .element-main-d .screen-1 .main-div {
    flex-direction: column-reverse;
    padding: 0 16px;
  }
}

.element-main-d .screen-1 .main-div .left-div {
  width: 47%;
}

@media screen and (max-width: 1000px) {
  .element-main-d .screen-1 .main-div .left-div {
    width: 100%;
  }
}


.element-main-d .screen-1 .main-div .left-div .p-1 {
  color: #FFF;
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: "Manrope", Helvetica;
  font-size: 60px;
  line-height: 60px;
  font-weight: 500;

  margin-top: 60px;
  margin-bottom: 60px;
}

@media screen and (max-width: 1200px) {
  .element-main-d .screen-1 .main-div .left-div .p-1 {
    margin-top: 50px;
    
  }
}

@media screen and (max-width: 1115px) {
  .element-main-d .screen-1 .main-div .left-div .p-1 {
    font-size: 40px;
    line-height: 40px;
  }
}

@media screen and (max-width: 1000px) {
  .element-main-d .screen-1 .main-div .left-div .p-1 {
    font-size: 30px;
    line-height: 36px;
  }
}


.element-main-d .screen-1 .main-div .left-div .p-2 {
  color: #FFF;
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: "Manrope", Helvetica;
  font-size: 18px;
  font-style: normal;
  font-weight: 600;
  line-height: 28px;

  width: 65%;
  margin-bottom: 64px;
}

@media screen and (max-width: 1000px) {
  .element-main-d .screen-1 .main-div .left-div .p-2 {
    width: 100%;
    margin-bottom: 24px;
  }
}

.element-main-d .screen-1 .main-div .video-play {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 20px;
  --webkit-gap: 20px;
}

@media screen and (max-width: 1000px) {
  .element-main-d .screen-1 .main-div .video-play {
    display: none;
  }
}

.element-main-d .screen-1 .main-div .video-play button {
  background-color: transparent;
  border-radius: 24px;
  border: 1px solid rgba(234, 234, 255, 0.24);
  padding: 12px 26px;
  outline: none;
}

.element-main-d .screen-1 .main-div .video-play button img {
  content: url("./img/video-paly-dark.svg");
}

.element-main-d .screen-1 .main-div .video-play div p {
  color: #FFF;
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: "Manrope", Helvetica;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 24px;
  white-space: nowrap;
}

.element-main-d .screen-1 .main-div .video-play-mobile {
  display: none;
  align-items: center;
  justify-content: flex-start;
  gap: 20px;
  --webkit-gap: 20px;
  width: 100%;
}

@media screen and (max-width: 1000px) {
  .element-main-d .screen-1 .main-div .video-play-mobile {
    display: flex;
  }
}

.element-main-d .screen-1 .main-div .video-play-mobile button {
  background-color: transparent;
  border-radius: 24px;
  border: 1px solid rgba(234, 234, 255, 0.24);
  padding: 12px 26px;
  outline: none;
}

.element-main-d .screen-1 .main-div .video-play-mobile button img {
  content: url("./img/video-paly-dark.svg");
}
/* ... */

